# full-sales-web-system

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  eslint.config.mjs  package.json  playwright.config.ts  playwright.field.config.ts  playwright.integration.config.ts  playwright.portal.config.ts  pnpm-lock.yaml  tsconfig.base.json
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/.cargo/: audit.toml
backend/crates/api-http/: Cargo.toml
backend/crates/api-http/src/: admin_orders.rs  audit.rs  audit_context.rs  catalog_events.rs  client_ip.rs  commerces.rs  deliveries.rs  error.rs  health_config.rs  inventory.rs  lib.rs  main.rs  maintenance.rs  media.rs  pagination.rs  platform_audit.rs  portal_content.rs  products.rs  reports.rs  routes.rs  sales.rs  session.rs  settings.rs  state.rs  status.rs  tenant_gate.rs  validation.rs
backend/crates/api-http/tests/: audit.rs  audit_compliance.rs  audit_fraud_contracts.rs  auth.rs  auth_contracts.rs  auth_matrix.rs  billing_contracts.rs  billing_provision.rs  billing_subscription.rs  billing_tenant_payments.rs  billing_webhook.rs  catalog_events.rs  categories.rs  categories_contracts.rs  cnpj_lookup_contract.rs  commerce_registrations.rs  commerce_registrations_contracts.rs  commerces.rs  commerces_authz.rs  commerces_contracts.rs  commerces_list.rs  deliveries.rs  deliveries_contracts.rs  deliveries_errors.rs  delivery_detail_items.rs  domains_contracts.rs  e2e.rs  e2e_journeys.rs  e2e_phase17_journeys.rs  health.rs  health_contracts.rs  health_monitoring.rs  inventory_contracts.rs  media.rs  media_contracts.rs  opencnpj_lookup.rs  orders_admin.rs  orders_contracts.rs  payments_contracts.rs  platform_auth.rs  (+36 more)
backend/crates/application/: Cargo.toml
backend/crates/application/src/: audit.rs  auth.rs  billing.rs  categories.rs  commerce_registrations.rs  commerces.rs  deliveries.rs  feature_flags.rs  lib.rs  orders.rs  products.rs  sales.rs  tenants.rs  users.rs
backend/crates/dev-seed/: Cargo.toml
backend/crates/dev-seed/assets/: README.md
backend/crates/dev-seed/scripts/: reset-dev-catalog.sh  sync-foodking-assets.sh
backend/crates/dev-seed/src/: audit.rs  catalog.rs  commerces.rs  deliveries.rs  demo_catalog.rs  demo_products.rs  error.rs  foundation.rs  ids.rs  lib.rs  main.rs  media_bytes.rs  orders.rs  platform_admin.rs  portal_content.rs  portal_promotions.rs  reports.rs  sales.rs  seed_assets.rs  site_settings.rs  users.rs
backend/crates/dev-seed/tests/: demo_catalog_images.rs  idempotent_seed.rs
backend/crates/domain-audit/: Cargo.toml
backend/crates/domain-audit/src/: actor_type.rs  audit_action.rs  audit_event.rs  lib.rs
backend/crates/domain-audit/tests/: audit_actions.rs
backend/crates/domain-billing/: Cargo.toml
backend/crates/domain-billing/src/: billing_interval.rs  error.rs  invoice.rs  invoice_status.rs  lib.rs  payment_method_toggles.rs  plan_features.rs  subscription.rs  subscription_plan.rs  subscription_status.rs  tenant_asaas_credentials.rs  tenant_payment_settings.rs
backend/crates/domain-billing/tests/: business_rules.rs  tenant_payment_settings.rs
backend/crates/domain-commerces/: Cargo.toml
backend/crates/domain-commerces/src/: address_type.rs  brazilian_state.rs  cnpj.rs  commerce.rs  commerce_address.rs  commerce_address_id.rs  commerce_id.rs  error.rs  lib.rs  postal_code.rs  registration_mode.rs  registration_status.rs
backend/crates/domain-commerces/tests/: commerce_address.rs  commerce_registration.rs
backend/crates/domain-deliveries/: Cargo.toml
backend/crates/domain-deliveries/src/: delivery.rs  delivery_id.rs  error.rs  lib.rs  (+1 more)
backend/crates/domain-domains/: Cargo.toml
backend/crates/domain-fraud/: Cargo.toml
backend/crates/domain-identity/: Cargo.toml
backend/crates/domain-inventory/: Cargo.toml
backend/crates/domain-media/: Cargo.toml
backend/crates/domain-orders/: Cargo.toml
backend/crates/domain-platform/: Cargo.toml
backend/crates/domain-reports/: Cargo.toml
backend/crates/domain-sales/: Cargo.toml
backend/crates/domain-shared/: Cargo.toml
backend/crates/infra-asaas/: Cargo.toml
backend/crates/infra-crypto/: Cargo.toml
backend/crates/infra-postgres/: Cargo.toml
backend/crates/infra-redis/: Cargo.toml
backend/crates/infra-storage/: Cargo.toml
backend/migrations/: 20260704120000_shared_tenants.sql  20260704120000_tenants_and_rls_template.sql  20260704120100_identity_users.sql  20260704120200_commerces_commerces.sql  20260704120300_inventory_products.sql  20260704120400_inventory_stock_movements.sql  20260704120500_inventory_stock_balances.sql  20260704120600_sales_sales.sql  20260704120700_sales_sale_items.sql  20260704120800_reports_signing_keys.sql  20260704120900_reports_reports.sql  20260704121000_shared_app_role.sql  20260704121100_shared_drop_placeholder.sql  20260704121200_inventory_stock_movements_immutable.sql  20260704121300_reports_reports_immutable.sql  20260704121400_shared_updated_at_trigger.sql  20260704121500_inventory_stock_movements_reason.sql  20260704121600_sales_lifecycle_timestamps.sql  20260704121700_sales_list_indexes.sql  20260704121800_inventory_reference_index.sql  20260704121900_reports_signing_keys_active_index.sql  20260704122000_audit_events.sql  20260704122100_reports_signing_keys_seed_dev.sql  20260704122200_media_files.sql  20260704122300_identity_user_commerce_contact.sql  20260704122400_identity_driver_profiles.sql  20260704122500_identity_seller_profiles.sql  20260704122600_commerces_commerce_addresses.sql  20260704122700_commerces_logo_file_id.sql  20260704122800_inventory_product_catalog.sql  20260704122900_inventory_product_images.sql  20260704123000_inventory_stock_reservations.sql  20260704123100_orders_orders.sql  20260704123200_orders_order_items.sql  20260704123300_deliveries_deliveries.sql  20260704123400_orders_driver_delivery_access.sql  20260704123500_sales_order_payment.sql  20260704123600_shared_tenant_site_settings.sql  20260704123700_media_tenant_entity_type.sql  20260705113300_product_images_delete.sql  (+24 more)
(+1582 files in other folders)
