[workspace]
resolver = "2"
members = [
    "crates/domain-shared",
    "crates/application",
    "crates/infra-postgres",
    "crates/infra-redis",
    "crates/infra-crypto",
    "crates/api-http",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
axum = "0.8"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["serde", "v7"] }

application = { path = "crates/application" }
domain-shared = { path = "crates/domain-shared" }
infra-crypto = { path = "crates/infra-crypto" }
infra-postgres = { path = "crates/infra-postgres" }
infra-redis = { path = "crates/infra-redis" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
