[package]
name = "api-http"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "api-http"
path = "src/main.rs"

[dependencies]
application.workspace = true
axum.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
serde_json.workspace = true

[lints]
workspace = true
