[package]
name = "api-http"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "api-http"
path = "src/main.rs"

[dependencies]
application.workspace = true
axum = { workspace = true, features = ["multipart"] }
domain-commerces.workspace = true
domain-deliveries.workspace = true
domain-identity.workspace = true
domain-inventory.workspace = true
domain-media.workspace = true
domain-orders.workspace = true
domain-reports.workspace = true
domain-sales.workspace = true
domain-shared.workspace = true
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex.workspace = true
http.workspace = true
infra-crypto.workspace = true
infra-postgres.workspace = true
infra-redis.workspace = true
infra-storage.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
application.workspace = true
domain-shared.workspace = true
infra-crypto.workspace = true
infra-postgres.workspace = true
infra-redis.workspace = true
infra-storage.workspace = true
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
serde_json.workspace = true

[lints]
workspace = true
