[package]
name = "api-http"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "api-http"
path = "src/main.rs"

[dependencies]
application.workspace = true
axum = { workspace = true, features = ["multipart"] }
domain-commerces.workspace = true
domain-deliveries.workspace = true
domain-identity.workspace = true
domain-billing.workspace = true
domain-platform.workspace = true
domain-inventory.workspace = true
domain-media.workspace = true
domain-orders.workspace = true
domain-reports.workspace = true
domain-sales.workspace = true
domain-shared.workspace = true
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex.workspace = true
base64.workspace = true
http.workspace = true
infra-crypto.workspace = true
infra-postgres.workspace = true
infra-redis.workspace = true
infra-storage.workspace = true
infra-asaas.workspace = true
chrono.workspace = true
dotenvy = "0.15"
serde.workspace = true
serde_json.workspace = true
subtle = "2"
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
uuid.workspace = true
reqwest.workspace = true
async-trait.workspace = true

[dev-dependencies]
application.workspace = true
dev-seed.workspace = true
domain-shared.workspace = true
infra-crypto.workspace = true
infra-postgres.workspace = true
infra-redis.workspace = true
infra-storage.workspace = true
infra-asaas.workspace = true
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
serde_json.workspace = true
wiremock = "0.6"

[lints]
workspace = true
