[package]
name = "application"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
domain-commerces.workspace = true
domain-deliveries.workspace = true
domain-identity.workspace = true
domain-inventory.workspace = true
domain-media.workspace = true
domain-orders.workspace = true
domain-sales.workspace = true
domain-platform.workspace = true
domain-audit.workspace = true
domain-billing.workspace = true
domain-fraud.workspace = true
domain-shared.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true

[lints]
workspace = true
