[package]
name = "domain-media"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
domain-identity.workspace = true
domain-shared.workspace = true
hex.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
