[package]
name = "domain-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
chrono = { workspace = true, features = ["serde"] }
domain-shared.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
