[package]
name = "infra-asaas"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
application.workspace = true
async-trait.workspace = true
chrono.workspace = true
domain-billing.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
domain-billing.workspace = true
wiremock = "0.6"

[lints]
workspace = true
