[package]
name = "infra-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
argon2.workspace = true
domain-shared.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
