[package]
name = "infra-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
argon2.workspace = true
aes-gcm.workspace = true
base64.workspace = true
domain-shared.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
totp-rs.workspace = true
uuid.workspace = true

[lints]
workspace = true
