[package]
name = "infra-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
chrono.workspace = true
domain-shared.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
