[package]
name = "infra-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "fullsales-migrate"
path = "src/bin/migrate.rs"

[dependencies]
chrono.workspace = true
domain-audit.workspace = true
domain-billing.workspace = true
domain-domains.workspace = true
domain-fraud.workspace = true
domain-platform.workspace = true
domain-shared.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
domain-audit.workspace = true
domain-inventory.workspace = true
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
