[package]
name = "infra-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
aws-config = "1"
aws-sdk-s3 = "1"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
aws-config = "1"
aws-sdk-s3 = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid.workspace = true

[lints]
workspace = true
